--- a/src/Presentacion/frmeliminar_inventario.form
+++ b/src/Presentacion/frmeliminar_inventario.form
@@ -68,7 +68,7 @@
                       <Component id="btnCancelarEliInv" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnEliminarInventario" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="15" max="32767" attributes="0"/>
+                  <EmptySpace pref="19" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -88,6 +88,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Eliminar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEliminarInventarioActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
